add list of all cities

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "local-start": "BOT_TOKEN=5158580967:AAHNI8AJIJt6uGBAOMvYG3RBXkenOvkapxY node index.js",
+    "local-start": "NODE_ENV=development BOT_TOKEN=5158580967:AAHNI8AJIJt6uGBAOMvYG3RBXkenOvkapxY node index.js",
     "start": "node index.js"
   },
   "keywords": [
@@ -23,5 +23,8 @@
     "jimp": "^0.16.1",
     "telegraf": "^4.7.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "localtunnel": "^2.0.2"
   }
 }
