--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "firebase-admin": "^10.1.0",
     "jimp": "^0.16.1",
     "telegraf": "^4.7.0",
     "uuid": "^8.3.2"
