--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "firebase-admin": "^10.1.0",
-    "jimp": "^0.16.1",
-    "telegraf": "^4.7.0",
-    "uuid": "^8.3.2"
+    "telegraf": "^4.7.0"
   },
   "devDependencies": {
     "localtunnel": "^2.0.2"
