--- a/package.json
+++ b/package.json
@@ -2,26 +2,23 @@
   "name": "world-time-teller",
   "version": "1.0.0",
   "type": "module",
-  "description": "telegram bot that tell you the time based on timezone",
+  "description": "This Telegram bot allows you to keep track of the current time in your favorite cities.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "local-start": "NODE_ENV=development BOT_TOKEN=5158580967:AAHNI8AJIJt6uGBAOMvYG3RBXkenOvkapxY node index.js",
+    "local-start": "node --env-file=.development.env index.js",
     "start": "node index.js"
   },
   "keywords": [
     "telegram-bot"
   ],
-  "engines": {
-    "node": "14.19.0",
-    "npm": "6.14.16"
-  },
-  "author": "barzin assa",
+  "author": "Barzin Assa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
-    "firebase-admin": "^10.1.0",
-    "telegraf": "^4.7.0"
+    "@google-cloud/firestore": "^7.10.0",
+    "express": "^4.21.0",
+    "firebase-admin": "^12.6.0",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "localtunnel": "^2.0.2"
